--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,10 @@
     <artifactId>Task4Itransition</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Task4Itransition</name>
+    <packaging>jar</packaging>
     <description>Task4Itransition</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -84,20 +85,9 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.2</version>
-            </plugin>
-
-            <plugin>
                 <groupId>com.heroku.sdk</groupId>
                 <artifactId>heroku-maven-plugin</artifactId>
-                <version>3.0.3</version>
+                <version>3.0.4</version>
                 <configuration>
                     <appName>user-task4-itransition</appName>
                 </configuration>
