--- a/pom.xml
+++ b/pom.xml
@@ -91,4 +91,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>corp1</id>
+            <name>Corporate Repository</name>
+            <url>file://C:\Users\HP\.m2\settings.xml</url>
+        </repository>
+    </distributionManagement>
 </project>
