--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>commons-validator</artifactId>
             <version>1.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.23</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -111,7 +117,8 @@
             <uniqueVersion>false</uniqueVersion>
             <id>corp1</id>
             <name>Corporate Repository</name>
-            <url>file://C:\Users\HP\.m2\settings.xml</url>
+            <url>file:///C:/Users/HP/.m2</url>
+            <layout>default</layout>
         </repository>
     </distributionManagement>
 </project>
